[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
log = "0.4"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4.0"

[dependencies.polyhal]
features = ["kcontext"]
git = "https://github.com/Byte-OS/polyhal.git"

[dependencies.riscv]
features = ["inline-asm"]
git = "https://github.com/rcore-os/riscv"

[profile.release]
debug = true
