[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
embedded-graphics = "0.7.1"
log = "0.4"
tinybmp = "0.3.1"
volatile = "0.3"
xmas-elf = "0.7.0"

[dependencies.easy-fs]
path = "../easy-fs"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4.0"

[dependencies.lose-net-stack]
git = "https://github.com/yfblock/lose-net-stack"
rev = "db42380"

[dependencies.polyhal]
features = ["kcontext"]
git = "https://github.com/Byte-OS/polyhal.git"

[dependencies.virtio-drivers]
git = "https://github.com/rcore-os/virtio-drivers"
rev = "3a9a69c"

[package]
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"
name = "os"
version = "0.1.0"


[profile.release]
debug = true
